# wg-package-metadata

data/2025-11-26/: README.md  licenses-0.1.csv  licenses-1.csv
docs/attribute_analysis/drafts/: attestation_analysis.md  license_analysis.md  license_appendix.md  license_coverage_results.txt  licenses-0.1_processed.csv  licenses-10_processed.csv  licenses-1_processed.csv  licenses-500top-balanced_processed.csv  source-code-url-analysis.md  status_analysis.md
src/: README.md  analyze_license_coverage.py  filter_balanced_sample.py  pyproject.toml
